docs: quick starts + examples parity + engine-bump release automation (#47)
Adds a Quick starts section to the README (embedded/connect/spawn/JUnit5/Spring, each a compiled
snippet), docs/intercept.md and docs/junit5.md guides, and per-module READMEs. Adds an examples/
module with two runnable parity samples — an Optimizely-datafile TLS-MITM intercept flow and a
proxy record/replay flow — each under 30 lines with a line-count guard, built on the JDK 22
embedded lane. Adds .github/workflows/engine-bump.yml, which opens a PR bumping the pinned
rift.engine.version when EtaCassiopeia/rift publishes a newer release (dispatch + weekly cron,
idempotent, dry-run capable, no auto-merge).

Closes #15